# sunny-batched-geneig

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  RISKS.md
benchmarks/: sw08_baseline.jl
benchmarks/profiles/: PHASE1_BASELINE.md
benchmarks/results/: sw08_baseline_20260429_020459.json  sw08_baseline_20260429_021559.json
cmake/: FindLAPACKE.cmake  FindMathDx.cmake
docs/: CUSOLVERDX_FUSED_BLOCKDIM_FINDING.md  CUSOLVERDX_NVRTC_HEEV_BUG.md  PHASE2_KERNEL.md  PHASE3_NVRTC.md  profiling.md
julia_env/: Manifest.toml  Project.toml
scripts/: env.sh  julia_clean.sh  sunny_smoke.jl
src/: CMakeLists.txt  geneig_fixed.cu  smoke.cu
src/nvrtc/: kernel_source.hpp  nvrtc_solver.cpp  nvrtc_solver.hpp
src/nvrtc/cusolverdx_overlay/cusolverdx/detail/: solver_execution.hpp
tests/: CMakeLists.txt  dump_pair.cpp  lapack_reference.cpp  probe_compile_timing.cpp  repro_heev_nvrtc.cpp  repro_potrf_nvrtc.cpp  test_autotune_n32.cpp  test_autotune_n54.cpp  test_blockdim_n32.cpp  test_bpb_sweep_n54.cpp  test_cache_invalidation.cpp  test_cache_n54.cpp  test_chol_n54.cpp  test_full_batched_n54.cpp  test_full_n54.cpp  test_nvrtc_multiN.cpp  test_nvrtc_n54.cpp  test_reduce_eig_n54.cpp  test_reduce_n54.cpp
